# heartbeat-test-task

./: CMakeLists.txt  README.md  main.cpp
tests/: CandleTest.cpp  CandleTest.hpp
